package com.example.learn.design.pattern.han._05结构型模式._07代理模式._01静态代理;

//接口
public interface ITeacherDao {

    void teach(); // 授课的方法
}
