package com.example.learn.design.pattern.han._05结构型模式._07代理模式._01静态代理;

public class TeacherDao implements ITeacherDao {

    @Override
    public void teach() {
        // TODO Auto-generated method stub
        System.out.println(" 老师授课中  。。。。。");
    }

}
