@startuml
'https://plantuml.com/class-diagram

interface ITeacherDao {
    void teach(); // 授课的方法
}

class TeacherDao{
    void teach(); // 授课的方法
}

class TeacherDaoProxy {
     void teach(); // 授课的方法
}

class Client

ITeacherDao <|.. TeacherDao
ITeacherDao <|.. TeacherDaoProxy

TeacherDaoProxy o-- TeacherDao
TeacherDaoProxy <.. Client
TeacherDao <.. Client
@enduml